<resources>
    <string name="app_name">Autocool</string>
    <string name="adherents">Adherents</string>
    <string name="title_activity_adherants">Adherants</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="visualiser">Visualiser</string>
    <string name="majTarif">Mettre à jour un tarif</string>
    <string name="tarifs">TARIFS</string>
    <string name="tarifsH">Tarifs horaires</string>
    <string name="tarifsKM">Tarifs KM</string>
    <string name="categorie">Catégorie</string>
    <string name="S">S</string>
    <string name="M">M</string>
    <string name="L">L</string>
    <string name="zero">0</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
