<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tarifs.menu_tarifs">

    <Spinner
        android:id="@+id/spnEditPrixHKM"
        android:layout_width="161dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:entries="@array/array_HKM"
        app:layout_constraintBottom_toBottomOf="@+id/spnEditPrixForm"
        app:layout_constraintStart_toEndOf="@+id/spnEditPrixForm"
        app:layout_constraintTop_toTopOf="@+id/spnEditPrixForm"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spnEditPrixColo"
        android:layout_width="161dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/spnEditPrixCateg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toEndOf="@+id/spnEditPrixCateg"
        app:layout_constraintTop_toTopOf="@+id/spnEditPrixCateg"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spnEditPrixCateg"
        android:layout_width="161dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:entries="@array/array_categ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnEditPrixForm" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="TARIFS"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnFormuleTarifs"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:entries="@array/array_formule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnChFormTarifs"
        android:layout_width="107dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/visualiser"
        app:layout_constraintBottom_toBottomOf="@+id/spnFormuleTarifs"
        app:layout_constraintStart_toEndOf="@+id/spnFormuleTarifs"
        app:layout_constraintTop_toTopOf="@+id/spnFormuleTarifs"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spnEditPrixForm"
        android:layout_width="161dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:entries="@array/array_formule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnEditPrixSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/enregistrer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditPrix" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/majTarif"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnFormuleTarifs" />

    <EditText
        android:id="@+id/txtEditPrix"
        android:layout_width="88dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnEditPrixCateg" />
        <!--android:textColor="@android:color/black"-->
        <!--android:textColorHighlight="@android:color/black"-->
        <!--android:textColorHint="@android:color/black"-->
        <!--android:textColorLink="@android:color/black"-->

</android.support.constraint.ConstraintLayout>